log
Wed 23 Aug 2023 10:06:29 PM UTC: 
 tests:  0|6
total_score: 0/70
797de46
Thu 24 Aug 2023 08:57:15 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4034bef
Thu 24 Aug 2023 08:59:41 PM UTC: 
 list.c | 64 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 56 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c:59:8: error: redefinition of ‘lastList’
   59 | void * lastList(List * list) {
      |        ^~~~~~~~
list.c:55:8: note: previous definition of ‘lastList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
   55 | void * lastList(List * list) {
      |        ^~~~~~~~
Compilation failed
ad84ddd
Thu 24 Aug 2023 09:00:47 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccWfnqzE.o: in function `cleanList':
test.c:(.text+0x1f4): undefined reference to `popFront'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccWfnqzE.o: in function `test_last_prev':
test.c:(.text+0x4bf): undefined reference to `prevList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x577): undefined reference to `prevList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x5dc): undefined reference to `prevList'
collect2: error: ld returned 1 exit status
Compilation failed
79a4792
Sat 26 Aug 2023 03:22:19 AM UTC: 
 list.c | 54 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 54 insertions(+)
 tests:  12|0
total_score: 70/70
f74855a
Sat 26 Aug 2023 03:29:42 AM UTC: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  12|0
total_score: 70/70
026d76e
